{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 22,
  "lineage": "bd262cec-3399-1504-e9d6-d58245c8ec93",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:034333503043:loadbalancer/app/fastapi-translation-alb/9143f837a40338fc",
            "arn_suffix": "app/fastapi-translation-alb/9143f837a40338fc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fastapi-translation-alb-295004382.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:034333503043:loadbalancer/app/fastapi-translation-alb/9143f837a40338fc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fastapi-translation-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e2a6770e79be8da0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ac02ac5d3bdc86b"
              },
              {
                "subnet_id": "subnet-0df84b44168b8667c"
              }
            ],
            "subnets": [
              "subnet-01ac02ac5d3bdc86b",
              "subnet-0df84b44168b8667c"
            ],
            "tags": {
              "App": "fastapi-translation",
              "Name": "fastapi-translation-alb",
              "Project": "fastapi-translation"
            },
            "tags_all": {
              "App": "fastapi-translation",
              "Application": "fastapi-translation",
              "ManagedBy": "terraform",
              "Name": "fastapi-translation-alb",
              "Project": "fastapi-translation"
            },
            "vpc_id": "vpc-04fac7aa450550e40",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:034333503043:listener/app/fastapi-translation-alb/9143f837a40338fc/07ea931d12c30ccd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:034333503043:targetgroup/fastapi-translation-tg/97ff63bf5e300b18",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:034333503043:listener/app/fastapi-translation-alb/9143f837a40338fc/07ea931d12c30ccd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:034333503043:loadbalancer/app/fastapi-translation-alb/9143f837a40338fc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Application": "fastapi-translation",
              "ManagedBy": "terraform",
              "Project": "fastapi-translation"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.app",
            "module.ecs.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:034333503043:targetgroup/fastapi-translation-tg/97ff63bf5e300b18",
            "arn_suffix": "targetgroup/fastapi-translation-tg/97ff63bf5e300b18",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:034333503043:targetgroup/fastapi-translation-tg/97ff63bf5e300b18",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fastapi-translation-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "fastapi-translation-tg",
              "Project": "fastapi-translation"
            },
            "tags_all": {
              "Application": "fastapi-translation",
              "ManagedBy": "terraform",
              "Name": "fastapi-translation-tg",
              "Project": "fastapi-translation"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04fac7aa450550e40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034333503043:security-group/sg-0e2a6770e79be8da0",
            "description": "ALB for fastapi-translation - HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2a6770e79be8da0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fastapi-translation-alb-sg",
            "name_prefix": "",
            "owner_id": "034333503043",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fastapi-translation-alb-sg",
              "Project": "fastapi-translation"
            },
            "tags_all": {
              "Application": "fastapi-translation",
              "ManagedBy": "terraform",
              "Name": "fastapi-translation-alb-sg",
              "Project": "fastapi-translation"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fac7aa450550e40"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034333503043:security-group/sg-06d9ef63c558b6816",
            "description": "ECS tasks for fastapi-translation - port 3000 from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d9ef63c558b6816",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App port from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2a6770e79be8da0"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "fastapi-translation-ecs-sg",
            "name_prefix": "",
            "owner_id": "034333503043",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fastapi-translation-ecs-sg",
              "Project": "fastapi-translation"
            },
            "tags_all": {
              "Application": "fastapi-translation",
              "ManagedBy": "terraform",
              "Name": "fastapi-translation-ecs-sg",
              "Project": "fastapi-translation"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fac7aa450550e40"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034333503043:internet-gateway/igw-02ff67b90f1464f71",
            "id": "igw-02ff67b90f1464f71",
            "owner_id": "034333503043",
            "tags": {
              "Name": "fastapi-translation-igw",
              "Project": "fastapi-translation"
            },
            "tags_all": {
              "Application": "fastapi-translation",
              "ManagedBy": "terraform",
              "Name": "fastapi-translation-igw",
              "Project": "fastapi-translation"
            },
            "vpc_id": "vpc-04fac7aa450550e40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034333503043:route-table/rtb-0766a5dfbaeeb9952",
            "id": "rtb-0766a5dfbaeeb9952",
            "owner_id": "034333503043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ff67b90f1464f71",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fastapi-translation-public-rt",
              "Project": "fastapi-translation"
            },
            "tags_all": {
              "Application": "fastapi-translation",
              "ManagedBy": "terraform",
              "Name": "fastapi-translation-public-rt",
              "Project": "fastapi-translation"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fac7aa450550e40"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053116bf67ca77546",
            "route_table_id": "rtb-0766a5dfbaeeb9952",
            "subnet_id": "subnet-01ac02ac5d3bdc86b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e20b288de736c78",
            "route_table_id": "rtb-0766a5dfbaeeb9952",
            "subnet_id": "subnet-0df84b44168b8667c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034333503043:subnet/subnet-01ac02ac5d3bdc86b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ac02ac5d3bdc86b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034333503043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fastapi-translation-public-1",
              "Project": "fastapi-translation"
            },
            "tags_all": {
              "Application": "fastapi-translation",
              "ManagedBy": "terraform",
              "Name": "fastapi-translation-public-1",
              "Project": "fastapi-translation"
            },
            "vpc_id": "vpc-04fac7aa450550e40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034333503043:subnet/subnet-0df84b44168b8667c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df84b44168b8667c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034333503043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fastapi-translation-public-2",
              "Project": "fastapi-translation"
            },
            "tags_all": {
              "Application": "fastapi-translation",
              "ManagedBy": "terraform",
              "Name": "fastapi-translation-public-2",
              "Project": "fastapi-translation"
            },
            "vpc_id": "vpc-04fac7aa450550e40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034333503043:vpc/vpc-04fac7aa450550e40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8e3af49544815d3",
            "default_route_table_id": "rtb-004ea800f6cffb9ec",
            "default_security_group_id": "sg-081b4ac21bce6db19",
            "dhcp_options_id": "dopt-0daa552fa41038d67",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04fac7aa450550e40",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004ea800f6cffb9ec",
            "owner_id": "034333503043",
            "tags": {
              "Name": "fastapi-translation-vpc",
              "Project": "fastapi-translation"
            },
            "tags_all": {
              "Application": "fastapi-translation",
              "ManagedBy": "terraform",
              "Name": "fastapi-translation-vpc",
              "Project": "fastapi-translation"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}